[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/572676-video-games.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_select"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=7]
action = "ui_cancel"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.00610051, 0.49695 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.113725, 0.12549, 0.129412, 1 ), Color( 0.113725, 0.12549, 0.129412, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.113725, 0.12549, 0.129412, 0 ), Color( 0.113725, 0.12549, 0.129412, 1 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 320.273, 315 )
rotation = -1.5708
scale = Vector2( 0.4, 0.440064 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.322
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -175.5
margin_bottom = 175.5
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 203.0
custom_colors/font_color = Color( 0.0273438, 0.0217069, 0.0210419, 1 )
custom_colors/font_outline_modulate = Color( 0.8, 0.141176, 0.113725, 1 )
custom_fonts/font = SubResource( 1 )
text = "NEURO
CUBES"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 207.0
margin_right = 640.0
margin_bottom = 475.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jogar" type="Button" parent="VBoxContainer/MenuContainer"]
margin_top = 46.0
margin_right = 640.0
margin_bottom = 87.0
custom_colors/font_color_disabled = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_color_hover = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color_pressed = Color( 0.741176, 0.682353, 0.576471, 1 )
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "JOGAR"
flat = true

[node name="Historia" type="Button" parent="VBoxContainer/MenuContainer"]
margin_top = 91.0
margin_right = 640.0
margin_bottom = 132.0
custom_colors/font_color_disabled = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_color_hover = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color_pressed = Color( 0.741176, 0.682353, 0.576471, 1 )
custom_fonts/font = SubResource( 5 )
text = "HISTÃ“RIA"
flat = true

[node name="Controles" type="Button" parent="VBoxContainer/MenuContainer"]
margin_top = 136.0
margin_right = 640.0
margin_bottom = 177.0
custom_colors/font_color_disabled = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_color_hover = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color_pressed = Color( 0.741176, 0.682353, 0.576471, 1 )
custom_fonts/font = SubResource( 5 )
text = "CONTROLES"
flat = true

[node name="Sair" type="Button" parent="VBoxContainer/MenuContainer"]
margin_top = 181.0
margin_right = 640.0
margin_bottom = 222.0
custom_colors/font_color_disabled = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color = Color( 0.921569, 0.858824, 0.698039, 1 )
custom_colors/font_color_hover = Color( 0.658824, 0.6, 0.517647, 1 )
custom_colors/font_color_pressed = Color( 0.741176, 0.682353, 0.576471, 1 )
custom_fonts/font = SubResource( 6 )
shortcut = SubResource( 8 )
text = "SAIR"
flat = true

[node name="FadeBackground" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.12549, 0.129412, 0.987873 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeBackground"]
anims/FadeIn = SubResource( 10 )
anims/FadeOut = SubResource( 11 )

[connection signal="pressed" from="VBoxContainer/MenuContainer/Jogar" to="." method="_on_Jogar_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/Jogar" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/Historia" to="." method="_on_Historia_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/Historia" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/Controles" to="." method="_on_Controles_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/Controles" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/Sair" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="FadeBackground/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
